fixed spacing

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,7 +11,7 @@ flex-direction: column;
 margin:40px;
 justify-content: center;
 background-color: #F7E7CE;
-padding:15px;
+padding:5px;
 }
 .outer {
   display:flex;
